--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,7 @@
     "license": "MIT",
     "version": "0.1.0",
     "require": {
-        "deployer/deployer": "~3.0",
-        "symfony/yaml": "^3.1"
+        "deployer/deployer": "~3.0"
     },
     "authors": [
         {
